# arc-agi-3

./: .gitignore  DESIGN.md  DESIGN_DD.md  LICENSE  README.md  SOLUTION_WRITEUP.md  pyproject.toml
arc_agi_3/: __init__.py  action_mapping.py  adapter.py  game_characterization.py  game_decomposer.py  harness.py  mediator.py  observer.py  perception.py  persistence.py
arc_agi_3/backends/: __init__.py  anthropic_backend.py  base.py  cached.py  mock.py  null.py
arc_agi_3/tools/: __init__.py  bfs.py  components.py  diff.py  registry.py  symmetry.py
cognitive_os/: __init__.py  affordance_claim.py  affordance_dsl.py  affordance_templates.py  affordance_visual.py  annotated_frame.py  causal_attribution.py  causal_providers.py  cell_grid.py  claims.py  closed_loop.py  competence.py  conditions.py  config.py  decomposer.py  dual_process.py  entity_stitch.py  episode_runner.py  explorer.py  forward_model.py  frame_diff.py  goal_forest.py  goal_manager.py  hypothesis_store.py  instincts.py  knowledge_index.py  lives_indicator.py  mechanic_catalog.py  mechanic_discovery.py  mechanic_learner.py  miners.py  observation_bridge.py  oracle.py  persistence.py  plan_attach.py  plan_scheduler.py  plan_search.py  plan_templates.py  plan_tool_registry.py  plan_tree.py  (+18 more)
cognitive_os/audit/: __init__.py  __main__.py  check.py  report.py  runner.py
cognitive_os/context_memory/: __init__.py  markdown_io.py  perception_bridge.py  purge.py  session.py
cognitive_os/dialogic/: __init__.py  verbalize.py
cognitive_os/perception/: __init__.py  catalog_loader.py  frame_annotation.py  geometry.py  interaction.py  level_memory.py  observation_digest.py  parallel_groups.py  parser.py  prompt.py  prompt_v2.py  scoring.py  similarity.py  viz.py  vlm_client.py
cognitive_os/world_model/: __init__.py  assemblies.py  relations.py  schema.py  tracker.py
tests/: test_adapter.py  test_cached_backend.py  test_end_to_end.py  test_game_characterization.py  test_game_decomposer.py  test_harness.py  test_observer_mediator.py  test_persistence.py  test_sdk_parity.py  test_tools.py
tests/fixtures/: __init__.py  (+1 more)
(+235 files in other folders)
